--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                                         Mining <span class="caret"></span>
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="http://pool.expanse.tech/">EXP.POOL</a></li>
+					<li><a href="http://pool.expanse.tech/">EXP.POOL</a></li>
+                                        <li><a href="https://expmine.pro/">EXPMINE.PRO POOL</a></li>
                                         <li><a href="http://exp.ethertrench.com/">ethertrench</a></li>
 					<li><a href="http://exp.hodlpool.com/">HODLPool</a></li>
                                         <li><a href="https://exp.suprnova.cc/">suprnova</a></li>
